crates/toml/tests/snapshots/invalid/string/multiline-quotes-01.stderr
TOML parse error at line 1, column 23
  |
1 | a = """6 quotes: """"""
  |                       ^
unexpected key or value, expected newline, `#`
